layout bug patch
Layout main page trim.
Patch complete.

--- a/src/app/layout/main/main.component.css
+++ b/src/app/layout/main/main.component.css
@@ -1,8 +1,9 @@
 #contents{
+    float: left;
     margin-right: 0px;
     width: calc(100% - 170px);
     min-width: 500px;
+    min-height: 100vh;
     padding: 10px;
-    position: absolute;
     left: 160px;
 }
